# apple1

./: .gitignore  MANUAL.md  Makefile  README.md  apple1.js  apple1.wasm
apple1-monitor/: README.md  package-lock.json  package.json
apple1-monitor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apple1-monitor/src-tauri/capabilities/: default.json
apple1-monitor/src-tauri/icons/: icon.icns
apple1-monitor/src-tauri/src/: emulator.rs  main.rs
demos/: adventure.bas  calendar.bas  fibonacci.bas  guess.bas  hamurabi.bas  hello.bas  life.bas  lunarlander.bas  mastermind.bas  nim.bas  sieve.bas  sort.bas  star.bas  startrek.bas  wumpus.bas
src/: aci.c  aci.h  assembler.c  assembler.h  basic.c  basic.h  config.c  config.h  cpu.c  cpu.h  cpu_bridge.c  disk.c  disk.h  display.c  display.h  keyboard.c  keyboard.h  log.c  log.h  main.c  memory.c  memory.h  pia.c  pia.h  roms_builtin.c  roms_builtin.h  snapshot.c  snapshot.h  wasm_bridge.c  wasm_stubs.c
tests/: test_basic.c  test_cpu.c  test_e2e.c  test_integration.c
tools/: create-installer.sh
web/: build.sh  emulator.js  index.html
