[package]
name = "apple1-monitor"
version = "1.0.0"
edition = "2021"

[build-dependencies]
cc = "1.0"
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
